# ABACUS-Pseudopot-Nao-Square

./: .gitignore  .pre-commit-config.yaml  Ne.md  Ne_datatable.md  README.md  _config.yml  anycall.py  apnsio.py  database.json  demo.json  driver.py  eos_driver.py  example.json  index.md  input_analysis.json  input_orbgen.json  input_test.json  main.py  orbgen.json  pyproject.toml  setup.py  temp.json  test.py  test_main.py
.github/apns_pages/: index.md
.github/workflows/: jekyll-gh-pages.yml
apns/: README.md  __init__.py  driver.py  run_test.py  test.py
apns/abacustest/: legacy.py  standalone.py
apns/analysis/: abacustest_reuse_eos_pw_vs_lcao.py  apns1_dos_utils.py  apns1_ecut_abacus.py  apns1_eos_abacus.py  apns1_eos_qespresso.py  apns1_utils.py  apns2_basiscompl_abacus.py  apns2_ecoh_abacus.py  apns2_ecoh_utils.py  apns2_ecut_abacus.py  apns2_ecut_qespresso.py  apns2_ecut_utils.py  apns2_eos_abacus.py  apns2_eos_qespresso.py  apns2_eos_utils.py  apns2_eta_abacus.py  apns2_eta_utils.py  apns2_utils.py
apns/module_analysis/: README.md  __init__.py  draw.py  driver_EcutwfcConv_20240319.py  read_abacus_out.py  result_import.py  walk_gather.py
apns/module_database/: README.md  __init__.py  database.py
apns/module_io/: README.md  __init__.py  abacustest.py  citation.py  input_translate.py  output_basic.py  output_lcao.py  output_pw.py  read_inp.py  work_status_expand.py
apns/module_nao/: archive.py  (+6 more)
docs/: _config.yml  about.md  index.html  index.md  keywords.html  keywords.md
download/: README.md
sources/: README.md  main.py  test.py
tools/: README.md
(+4057 files in other folders)
